--- a/style.scss
+++ b/style.scss
@@ -7,14 +7,13 @@
 }             
 
 body{
-    margin: auto;padding: 0;
-    background: url(./img/background.jpg) no-repeat #0a1c26;
-    background-size: contain;
+    margin: 0;padding: 0;
+    background: url(./img/background.jpg)  no-repeat  #0a1c26;
     
+    background-size: contain;    
     color: #FFF;
-    font-family: "Gilroy";
+    font-family: "Gilroy"
     
-    max-width: 1980px;
 }
 
 a{
@@ -24,16 +23,18 @@ a{
 h1,
 h2{
     font-family: 'Chronicle Display';
+    @media (max-width:977px) {
+        font-size:3rem !important;
+    }
 }
 header{
     width: 90%;
-    max-width: 1980px;
     margin: 20px auto;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    font-size: 18px;
-    
+
+
     .nav-list{
         padding: 0;
         justify-content: space-between;
@@ -73,7 +74,7 @@ header{
         width: 60%;
         .titre{
             font-weight: 600;
-            font-size: 88px;
+            font-size: 5rem;
             margin: 0;
         }
         .scroll-btn{
@@ -123,9 +124,18 @@ header{
         justify-content: space-between;
         &:nth-child(even){
             flex-flow: row-reverse;
+            .description{
+                margin: 0;
+            }
         }
-        @media (max-width:1474) {
-            
+        @media (max-width:1818px) {
+            width:90% ;
+        }
+        .article-img{
+           
+           @media (max-width:1257px) {
+            width: 47%;
+           }
         }
         .description{
             position: relative;
@@ -135,20 +145,19 @@ header{
             width: 42%;
             .numero{
                 position: absolute;
-                bottom: 11%;
+                // bottom: 11%;
                 left: -21.6%;
-                font-size: 240px;
+                font-size: 15rem;
                 font-weight: bold;
                 opacity: 0.1;
-                @media (max-width:1818px) {
-                    bottom: 17%;
+                color: var(--lien);
+                @media (max-width:1074px) {
+                    font-size:9rem ;
                 }
-                @media (max-width:1451px) {
-                    bottom: 23%;
-                }
+                
             }
             .article-titre{
-                font-size:64px ;
+                font-size:4rem ;
                 margin: 27px 0px;
             }
             .article-description{
@@ -174,6 +183,7 @@ header{
     color: var(--jaune);
     letter-spacing: 6px;
     font-weight: 800;
+    position: relative;
     .barre-horizontal{
         width: 72px;
         height: 2px;
