--- a/style.scss
+++ b/style.scss
@@ -23,9 +23,6 @@ a{
 h1,
 h2{
     font-family: 'Chronicle Display';
-    @media (max-width:977px) {
-        font-size:3rem !important;
-    }
 }
 header{
     width: 90%;
@@ -33,7 +30,7 @@ header{
     display: flex;
     justify-content: space-between;
     align-items: center;
-
+    flex-flow: wrap;
 
     .nav-list{
         padding: 0;
@@ -57,6 +54,9 @@ header{
     margin:200px auto;
     display: flex;
     justify-content: space-between;
+    @media (max-width:784px) {
+        margin: 100px auto;
+    }
     .aside-left{
         display: flex;
         flex-flow: column;
@@ -76,6 +76,13 @@ header{
             font-weight: 600;
             font-size: 5rem;
             margin: 0;
+            
+            @media (max-width:1074px) {
+                font-size: 3rem;
+            }
+            @media (max-width:784px) {
+                font-size: 2rem;
+            }
         }
         .scroll-btn{
             display: flex;
@@ -112,29 +119,56 @@ header{
     }
 }
 #contenu{
-    margin-top: 90vh;
+    margin-top: 80vh;
     display: flex;
     flex-flow: column;
     align-items: center;
+    @media (max-width:1592px) {
+        margin-top: 30%;
+    }
+    @media (max-width:1302px) {
+        margin-top: 25%;
+    }
+    @media (max-width:1079px) {
+        margin-top: 15%;
+    }
+    @media (max-width:923px) {
+        margin-top: 0;
+    }
     .article-montagne{
         width: 80%; 
         margin: 100px 0;
         display: flex;
         align-items: center;
         justify-content: space-between;
+        @media (max-width:1818px) {
+            width:90% ;
+        }
+        @media (max-width:923px) {
+            margin-top: 0;
+        }
+        @media (max-width:768px) {
+            flex-flow: column;
+        }
+        @media (max-width:768px) {
+            margin: 150px 0;
+        }
         &:nth-child(even){
             flex-flow: row-reverse;
+            @media (max-width:768px) {
+                flex-flow: column;
+            }
             .description{
                 margin: 0;
             }
         }
-        @media (max-width:1818px) {
-            width:90% ;
-        }
         .article-img{
-           
+            
            @media (max-width:1257px) {
             width: 47%;
+           }
+           @media (max-width:768px) {
+            width: 60%;
            }
         }
         .description{
@@ -143,9 +177,16 @@ header{
             flex-flow: column;
             margin: auto;
             width: 42%;
+            @media (max-width:768px) {
+                width: 70%;
+            }
+            @media (max-width:651px) {
+                width: 90%;
+
+            }
             .numero{
                 position: absolute;
-                // bottom: 11%;
+                margin: 0;
                 left: -21.6%;
                 font-size: 15rem;
                 font-weight: bold;
@@ -154,11 +195,16 @@ header{
                 @media (max-width:1074px) {
                     font-size:9rem ;
                 }
-                
+                @media (max-width:651px) {
+                    left: -10%;
+                }
             }
             .article-titre{
                 font-size:4rem ;
                 margin: 27px 0px;
+                @media (max-width:1074px) {
+                    font-size:2rem;
+                }
             }
             .article-description{
                 line-height: 32px;
@@ -184,6 +230,9 @@ header{
     letter-spacing: 6px;
     font-weight: 800;
     position: relative;
+    @media (max-width:1074px) {
+        font-size:0.7rem;
+    }
     .barre-horizontal{
         width: 72px;
         height: 2px;
