--- a/style.scss
+++ b/style.scss
@@ -258,7 +258,11 @@ footer{
     @media (max-width:708px) {
         flex-flow: column-reverse;
         justify-content: space-around;
-        margin: 45px;
+        margin: 45px auto;
+    }
+    @media (max-width:504px) {
+        
+        margin: 0 auto;
     }
     
     .footer-Box{
@@ -273,6 +277,10 @@ footer{
             width: 90%;
             margin: 25px;
             justify-content: space-around;
+        }
+        @media (max-width:504px) {
+            width: 99%;
+            margin: 0;
         }
 
         article{
